--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react": "^7.32.2",
     "vite": "^4.2.1",
     "wdio-chromedriver-service": "^8.1.1",
+    "@testing-library/webdriverio": "^3.2.1",
     "wdio-electron-service": "^4.0.2"
   }
 }
