--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
+    "@testing-library/webdriverio": "^3.2.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@wdio/cli": "^8.8.8",
     "@wdio/local-runner": "^8.8.8",
     "@wdio/mocha-framework": "^8.8.7",
     "@wdio/spec-reporter": "^8.8.7",
     "chromedriver": "^112.0.0",
+    "dotenv": "^16.0.3",
     "electron": "^22.3.4",
     "electron-builder": "^24.2.1",
     "electron-vite": "^1.0.21",
@@ -44,7 +46,6 @@
     "eslint-plugin-react": "^7.32.2",
     "vite": "^4.2.1",
     "wdio-chromedriver-service": "^8.1.1",
-    "@testing-library/webdriverio": "^3.2.1",
     "wdio-electron-service": "^4.0.2"
   }
 }
