--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,23 @@
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
 - test
-sast:
+- lint
+
+unit-test:
+  image: node-latest
   stage: test
-include:
-- template: Security/SAST.gitlab-ci.yml
+  before_Script:
+   - npm install
+  script:
+   - npm run wdio
+
+
+linting:
+  image: node:latest
+  stage: lint
+
+  script:
+    - npm i eslint eslint-plugin-react eslint-plugin-jsdoc eslint-plugin-prettier eslint-config-prettier
+  # run eslint
+    - npm run lint
+    - node_modules/eslint/bin/eslint.js .
