Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ stages:
 unit-test:
   image: node-latest
   stage: test
-  before_Script:
+  before_script:
    - npm install
   script:
    - npm run wdio
