--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,14 +10,17 @@ stages:
 - lint
 
 unit-test:
-  image: selenium/standalone-chrome:latest 
+  image: node:latest 
   stage: test
   services:
    - name: selenium/standalone-chrome:latest 
+  variables:
+    SELENIUM_REMOTE_URL: http://selenium__standalone-chrome:4444/wd/hub
   before_script:
    - npm install
   script:
    - npm run wdio
+
 
 
 linting:
