--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ stages:
 
 build:
   stage: build
-  image: node:latest
+  image: electronuserland/builder:wine
   before_script:
     - npm install
   script:
