--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,11 +21,13 @@ build:
 unit-test:
   stage: test
   image: norf/node-electron-test:20.1.0
+  services:
+    - selenium/node-chrome
   before_script:
     - npm install
     - npm run build:linux
   script:
-    - npm run wdio
+    - npm run wdio --host=selenium/node-chrome
 
 
 linting:
