--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ unit-test:
     - npm install
   script:
     - npm run build:linux
-    - export DISPLAY:99.0
+    - export DISPLAY=:99.0
     - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
     - npm run wdio
 
