--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,16 +18,16 @@ build:
   script:
     - npm run build:win
 
-unit-test:
-  stage: test
-  image: norf/node-electron-test:20.1.0
-  before_script:
-    - npm install
-  script:
-    - npm run build:linux
-    - export DISPLAY=:99.0
-    - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-    - npm run wdio
+#unit-test:
+#  stage: test
+#  image: norf/node-electron-test:20.1.0
+#  before_script:
+#    - npm install
+#  script:
+#    - npm run build:linux
+#    - export DISPLAY:99.0
+#    - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+#    - npm run wdio
 
 
 linting:
