--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "dev": "electron-vite dev",
     "build": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
-    "build:win": "npm run build && electron-builder --win --config",
+    "build:win": "npm run build && electron-builder --win --publish always --config",
     "build:mac": "npm run build && electron-builder --mac --config",
     "build:linux": "npm run build && electron-builder --linux --config",
     "wdio": "wdio run ./wdio.conf.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HaatoChan/league-project" 
   },
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.3",
