--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "An Electron application with React",
   "main": "./out/main/index.js",
-  "author": "example.com",
+  "author": "Pasha",
   "homepage": "https://www.electronjs.org",
   "icon": "./src/public/FAVICON256.png",
   "scripts": {
@@ -13,7 +13,8 @@
     "dev": "electron-vite dev",
     "build": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
-    "build:win": "npm run build && electron-builder --win --publish always --config",
+    "build:win": "npm run build && electron-builder --win --config",
+    "publish:win":"npm run build && electron-builder --win --publish always --config",
     "build:mac": "npm run build && electron-builder --mac --config",
     "build:linux": "npm run build && electron-builder --linux --config",
     "wdio": "wdio run ./wdio.conf.js"
